Add struct PWM_CHANNEL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
 
-find_package(Threads REQUIRED)
 
 set(CMAKE_SYSTEM_NAME Generic)
 set(CMAKE_CXX_COMPILER arm-g++)
@@ -12,3 +11,8 @@ add_compile_options(
 	-Werror
 	-O2
 )
+
+set(LIB_NAME pwm)
+add_library(${LIB_NAME} STATIC src/pwm.cpp)
+target_include_directories(${LIB_NAME} PUBLIC include)
+install(TARGETS ${LIB_NAME} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
