--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 
 set(CMAKE_SYSTEM_NAME Generic)
-set(CMAKE_CXX_COMPILER arm-g++)
-set(CMAKE_C_COMPILER arm-gcc)
+set(CMAKE_CXX_COMPILER arm-linux-g++)
+set(CMAKE_C_COMPILER arm-linux-gcc)
 
 add_compile_options(
 	-std=gnu++11
